--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3RuJsUQ3759MGeXPIp02-hIREZpkrLqs&libraries=places"
+    async></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
