funciona el mapa

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     
     <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3RuJsUQ3759MGeXPIp02-hIREZpkrLqs&libraries=places"
-    async></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBcTzSZGK8AkzpKju8XmoxbcOScI7fZry0&libraries=places&callback=" async></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3RuJsUQ3759MGeXPIp02-hIREZpkrLqs&libraries=places"
+    async></script> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
